--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,5 +1,5 @@
 /* Fonts */
-* {
+html {
     font-family: "Poppins";
 }
 
@@ -37,16 +37,25 @@
     color: white;
     display: block;
     transition: 0.3s;
+}
 
+.navDesk a:hover {
+    transform: scale(1.3, 1.3);
+    transition: 0.3s;
 }
 
 .links {
+    font-family: "Caveat";
+    font-size: 1.4em;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+.links a:hover {
+    transform: scale(1.5, 1.5);
+}
 
 .bar {
     width: 20px;
@@ -85,8 +94,8 @@ h1 {
 }
 
 h2 {
-    font-family: "Poppins";
-    font-size: 1.5em;
+    font-family: "Caveat";
+    font-size: 1.7em;
 }
 
 /* Start*/
@@ -97,14 +106,19 @@ h2 {
     height: 100vh;
     vertical-align: middle;
     text-align: center;
+    background-image: url("../img/Asset%208heroImage.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 #home h1 {
     text-align: center;
     font-size: 3em;
+    color: white;
 }
 
-/* Over ons*/
+/* OVER ONS */
 
 #about {
     width: 100%;
@@ -142,7 +156,13 @@ h2 {
 }
 
 
-/*Merch */
+/* GOAL */
+#goal {
+    width: 100%;
+    text-align: center;
+}
+
+/* MERCH */
 #merch {
     text-align: center;
     height: 100vh;
@@ -198,7 +218,6 @@ footer p {
     /* Nav*/
 
     .nav-mobile {
-        font-family: "Poppins";
         display: none;
     }
 
@@ -213,7 +232,7 @@ footer p {
         height: 5vh;
         text-align: right;
         vertical-align: middle;
-        background-color: grey;
+        background-color: rgb(102, 45, 145);
     }
 
     #navDesk a {
