--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,4 +1,15 @@
+
 /* Fonts */
+@font-face{
+    font-family: "Poppins";
+    src: url(../fonts/poppins-regular-webfont.ttf);
+    src: url(../fonts/poppins-regular-webfont.woff);
+    src: url(../fonts/poppins-regular-webfont.woff2);
+}
+
+
+
+
 * {
     font-family: "Poppins";
 }
