--- a/website/css/style.css
+++ b/website/css/style.css
@@ -7,14 +7,17 @@
     src: url(../fonts/poppins-regular-webfont.woff2);
 }
 
+@font-face{
+    font-family: "Caveat";
+    src: url(../fonts/caveat-regular-webfont.ttf);
+    src: url(../fonts/caveat-regular-webfont.woff);
+    src: url(../fonts/caveat-regular-webfont.woff2);
+}
 
 
 
-* {
-||||||| merged common ancestors
-* {
-=======
->>>>>>> fff8c472b9d77a7d195a2b11f5deaba96aa71f31
+
+p {
     font-family: "Poppins";
 }
 
@@ -52,16 +55,25 @@
     color: white;
     display: block;
     transition: 0.3s;
+}
 
+.navDesk a:hover {
+    transform: scale(1.3, 1.3);
+    transition: 0.3s;
 }
 
 .links {
+    font-family: "Caveat";
+    font-size: 1.4em;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+.links a:hover {
+    transform: scale(1.5, 1.5);
+}
 
 .bar {
     width: 20px;
@@ -100,8 +112,8 @@ h1 {
 }
 
 h2 {
-    font-family: "Poppins";
-    font-size: 1.5em;
+    font-family: "Caveat";
+    font-size: 1.7em;
 }
 
 /* Start*/
@@ -112,14 +124,19 @@ h2 {
     height: 100vh;
     vertical-align: middle;
     text-align: center;
+    background-image: url("../img/Asset%208heroImage.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 #home h1 {
     text-align: center;
     font-size: 3em;
+    color: white;
 }
 
-/* Over ons*/
+/* OVER ONS */
 
 #about {
     width: 100%;
@@ -157,7 +174,13 @@ h2 {
 }
 
 
-/*Merch */
+/* GOAL */
+#goal {
+    width: 100%;
+    text-align: center;
+}
+
+/* MERCH */
 #merch {
     text-align: center;
     height: 100vh;
@@ -213,7 +236,6 @@ footer p {
     /* Nav*/
 
     .nav-mobile {
-        font-family: "Poppins";
         display: none;
     }
 
@@ -228,7 +250,7 @@ footer p {
         height: 5vh;
         text-align: right;
         vertical-align: middle;
-        background-color: grey;
+        background-color: rgb(102, 45, 145);
     }
 
     #navDesk a {
